--- a/src/templates/partials/dashboard/_dashboard.html
+++ b/src/templates/partials/dashboard/_dashboard.html
@@ -116,7 +116,7 @@
                 <div class="interlocutor__name dialogue-block__interlocutor-name">
                     DigiBot
                 </div>
-                <div class="online-indicator interlocutor__indicator">
+                <div class="online-indicator online-indicator_online interlocutor__indicator">
                 </div>
             </div>
         </div>
@@ -164,7 +164,7 @@
                             <div class="dialogue-message__col col-2">
                                 <div class="dialogue-message__img">
                                     <img src="./img/{{ item.img }}" alt="avatar">
-                                <div class="online-indicator dialogue-message__indicator">
+                                <div class="online-indicator online-indicator_online dialogue-message__indicator">
                                 </div>
                                 </div>
                             </div>
