--- a/src/templates/partials/settings-history/_settings-history.html
+++ b/src/templates/partials/settings-history/_settings-history.html
@@ -39,7 +39,7 @@
                                     <!-- begin sm-tabs -->
                                     <div class="sm-tabs">
                                         <div class="sm-tabs__head">
-                                            <div class="sm-tabs__current">Discover</div>
+                                            <div class="sm-tabs__current">YouTube</div>
                                             <ul class="sm-tabs__list">
                                                 {% for text in ['YouTube','Twitter','Instagram','Tumblr','Facebook'] %}
                                                 <li class="sm-tabs__item{% if loop.first %} is-active{% endif %}">
