--- a/src/sass/components/_index.sass
+++ b/src/sass/components/_index.sass
@@ -10,4 +10,6 @@
 @import compain-audience/index
 @import compain-review/index
 @import settings-general/index
+@import messages/index
+@import content/index
 @import footer
