--- a/src/sass/components/dashboard/_dashboard.sass
+++ b/src/sass/components/dashboard/_dashboard.sass
@@ -411,7 +411,8 @@
     width: rem(7px)
     height: rem(7px)
     border-radius: 50%
-    background-color: $green
+    background-color: $gray-200
+    // background-color: $green
     // border: 4px solid #d2f9d5
     position: absolute
     &:before
@@ -421,8 +422,19 @@
         bottom: rem(-4px)
         left: rem(-4px)
         right: rem(-4px)
-        background-color: rgba($green, .18)
+        background-color: rgba($gray-200,.18)
+        // background-color: rgba($green, .18)
         border-radius: 50%
+    &_online
+        background-color: $green
+        &:before
+            background-color: rgba($green, .18)
+    &_big
+        width: rem(14px)
+        height: rem(14px)
+    &_medium
+        width: rem(9px)
+        height: rem(9px)
 .dialogue-message
     font-size: rem(16px)
     &:not(:last-child)
