--- a/src/sass/components/messages/_messages-dialogue.sass
+++ b/src/sass/components/messages/_messages-dialogue.sass
@@ -10,9 +10,11 @@
         +sm
             flex-direction: column
             align-items: flex-start
+            padding-left: rem(15px)
             .search-bar
                 order: 2
                 margin-top: 10px
+                width: 100%
         .chat-switcher
             width: 100%
     &__body
