--- a/src/sass/components/dashboard/_dashboard.sass
+++ b/src/sass/components/dashboard/_dashboard.sass
@@ -329,6 +329,7 @@
     border-radius: rem(8px)
     box-shadow: 0 3px 6px rgba(#000, .16)
     z-index: 5
+    display: none
     +sm
         top: 0
         bottom: 0
