deleted excess pictures

--- a/src/templates/partials/_header.html
+++ b/src/templates/partials/_header.html
@@ -4,7 +4,7 @@
     <div class="header__wrap inner{% if login %} inner_lg{% endif %}">
         <div class="logo">
             <a href="./index.html">
-                <img src="./img/logo (1)@2x.png" alt="img">
+                <img src="./img/logo.svg" alt="img">
             </a>
         </div>
         {% if login %}
