--- a/src/templates/partials/home/_contacts.html
+++ b/src/templates/partials/home/_contacts.html
@@ -29,7 +29,7 @@
                 <div class="contacts__inner inner">
                     <div class="contacts__logo">
                         <a href="#">
-                            <img src="./img/logo (1)@2x.png" alt="img">
+                            <img src="./img/logo.svg" alt="img">
                         </a>
                     </div>
                     <div class="contacts__menu ">
