--- a/src/templates/partials/home/_friends.html
+++ b/src/templates/partials/home/_friends.html
@@ -1,4 +1,4 @@
-<div class="friends slide" style="background-image: url(./img/friends-bg.png)">
+<div class="friends slide" style="background-image: url(./img/friends-bg.svg)">
     <div class="friends__inner slide__inner inner">
         <div class="friends__content">
             <div class="friends__text">
