--- a/src/templates/partials/messages/_messages.html
+++ b/src/templates/partials/messages/_messages.html
@@ -155,6 +155,13 @@
                                         </div>
                                     </div>
                                 </div>
+                                {% if loop.first %}
+                                    <div class="message-day">
+                                        <div class="message-day__text">
+                                            Today
+                                        </div>
+                                    </div>
+                                {% endif %}
                             {% endfor %}
                         </div>
                         <div class="typing is-typing">
